<?xml version="1.0"?>
    <resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">faditor</string>
    <string name="facebook_app_id">249290509720019</string>
    <string name="fb_login_protocol_scheme">fb249290509720019</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY" tools:ignore="ExtraTranslation">0lY6xdMc8l3Bgkdep8DvfPxe4</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" tools:ignore="ExtraTranslation">2Uov8wp8sQWccy1oRRes7Q3VgWfsTE1tokYHblse9TTaF0BW1b</string>


    <string name="best_look_user2">ssuu</string>
    <string name="best_look_user1">amassuvin</string>
    <string name="user_name">faditor</string>
    <string name="user_info">자고싶다</string>
    <string name="f1">스트릿</string>
    <string name="f2">데님</string>
    <string name="f3">아메카지</string>
    <string name="profilechange">프로필 사진 바꾸기</string>
    <string name="name">이수현</string>
    <string name="phone">010-1111-1111</string>

    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">회원가입 및 이메일 로그인</string>
    <string name="signin_google">Google으로 로그인</string>
    <string name="signin_facebook">Facebook으로 로그인</string>
    <string name="signin_twitter">Twitter으로 로그인</string>
    <string name="signup_complete">회원가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해주세요</string>

    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- Account -->
    <string name="post">posts  </string>
    <string name="following">following</string>
    <string name="follower">follower</string>
    <string name="follow">follow</string>
    <string name="follow_cancel">팔로우 취소</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">님이 좋아요를 눌렀습니다.</string>
    <string name="alarm_who">님이 </string>
    <string name="alarm_comment"> 메세지를 남겼습니다.</string>
    <string name="alarm_follow">님이 당신의 계정을 팔로워하기 시작했습니다.</string>

    <!-- Comment -->
    <string name="send">보내기</string>

    <!-- Add Photo -->
    <string name="upload_image">사진 올리기</string>
    <string name="hint_image_content">내용</string>
    <string name="upload_success">업로드 성공</string>
    <string name="upload_fail">업로드 실패</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- etc -->
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>

</resources>